Post, Put 요청 리퀘스트 모델 수정, 리스폰스 모델 수정
