# gotutorials/goBaseProj/handler/user/PostUser.go
@@ -15,7 +15,7 @@ import (
 // @Summary      유저 정보 등록
 // @Description  유저 정보를 등록합니다.
 // @Produce      json
-// @Param 		 Param body model.User true "유저 정보 JSON Format"
+// @Param 		 Param body model.UserPostReq true "유저 정보 JSON Format"
 // @Success      200  {array}  model.UserResult
 // @Router       /user [post]
 func PostUser(c *gin.Context) {
@@ -35,16 +35,12 @@ func PostUser(c *gin.Context) {
 	// userService 호출
 	userService := service.UserService{db}
 	// 쿼리날리기
-	insertRes := userService.PostUser(resBody)
-
-	// 정상적인 INSERT 아니면 상태를 RETURN
-	if insertRes.Status != http.StatusOK {
-		c.JSON(insertRes.Status, insertRes)
-		return
-	}
+	postRes := userService.PostUser(resBody)
 
 	// 성공했다면 insert된 값을 반환
-	// resp := userService.GetUser(insertRes.Message)
-	// resp.Cmd = "INSERT"
-	// c.JSON(resp.Status, resp)
+	if postRes.Status == http.StatusOK {
+		resp := userService.GetUser(postRes.UserData.UserID)
+		resp.Cmd = "INSERT"
+		c.JSON(resp.Status, resp)
+	}
 }
