# gotutorials/goBaseProj/model/User.go
@@ -2,11 +2,24 @@ package model
 
 // BASIC STRUCT
 type User struct {
-	ID        int       `json:"id"`
-	FirstName string    `json:"f_name"`
-	LastName  string    `json:"l_name"`
-	Email     string    `json:"email"`
-	CreatedAt string	 `json:"created_at"`
+	UserID    int    `json:"user_id"`
+	FirstName string `json:"f_name"`
+	LastName  string `json:"l_name"`
+	Email     string `json:"email"`
+	CreatedAt string `json:"created_at"`
+}
+
+// REQUEST STRUCT
+type UserPostReq struct {
+	FirstName string `json:"f_name"`
+	LastName  string `json:"l_name"`
+	Email     string `json:"email"`
+}
+
+type UserPutReq struct {
+	UserID    int    `json:"user_id"`
+	FirstName string `json:"f_name"`
+	LastName  string `json:"l_name"`
 }
 
 // RESPONS STRUCT
@@ -18,9 +31,8 @@ type UserResult struct {
 }
 
 type UserListResult struct {
-	Status          int       `json:"status" example:"200"`
-	Message         string    `json:"message" example:"success"`
-	Cmd             string    `json:"cmd" example:"INSERT/SELECT/UPDATE/DELETE"`
+	Status   int    `json:"status" example:"200"`
+	Message  string `json:"message" example:"success"`
+	Cmd      string `json:"cmd" example:"INSERT/SELECT/UPDATE/DELETE"`
 	UserList []User `json:"user_list"`
 }
-
